@@ -31,6 +31,9 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.x
 Updates:
 - Implot: updated to v0.8
 
+New Commands:
+- Plots: Added "add_stair_series" command
+
 -----------------------------------------------------------------------
  VERSION 0.5.66
 -----------------------------------------------------------------------
